Avence Consulta y Modificar

--- a/src/main/webapp/registrar/css/main.css
+++ b/src/main/webapp/registrar/css/main.css
@@ -184,7 +184,10 @@ h6 {
 }
 
 .wrapper--w680 {
-  max-width: 680px;
+    /*
+    max-width: 680px;
+    */
+    width: 1000px;
 }
 
 /* ==========================================================================
