--- a/src/main/webapp/color/default.css
+++ b/src/main/webapp/color/default.css
@@ -1,6 +1,6 @@
 
 a,.tp-caption a.btn:hover {
-	color: #67b0d1;
+	color: #A00707;
 }
 .top-nav-collapse {
     background: #A00707;
@@ -8,7 +8,7 @@ a,.tp-caption a.btn:hover {
 
 @media (max-width: 768px) {
   .navbar, .navbar-nav {
-		background: #67b0d1 !important;
+		background: #A00707 !important;
 	}
 
 	.navbar-nav a {
@@ -17,7 +17,7 @@ a,.tp-caption a.btn:hover {
 }
 
 .navbar-custom ul.nav ul.dropdown-menu li a:hover {
-	color: #67b0d1;
+	color: #A00707;
 }
 
 .owl-theme .owl-controls .owl-page.active span,
@@ -26,11 +26,11 @@ a,.tp-caption a.btn:hover {
 }
 
 .widget-avatar .avatar:hover {
-    border: 5px solid #67b0d1;
+    border: 5px solid #A00707;
 }
 
 .bg-skin {
-	background: #67b0d1;
+	background: #A00707;
 }
 
 form#contact-form input:focus,form#contact-form select:focus,form#contact-form textarea:focus {
